--- a/report/main.tex
+++ b/report/main.tex
@@ -15,11 +15,13 @@
 \setlength{\pdfpagewidth}{\pprw}
 \setlength{\pdfpageheight}{\pprh}
 
-\newacronym{IoT}{IoT}{Internet of things}
+\newacronym{IoT}{IoT}{Internet of Things}
 
 \begin{document}
 
-\title{Title}
+\title{Security for the Internet of Things - CoAP Fuzzing}
+
+\author{Jan Ehmueller and Justin Trautmann}
 
 \begin{abstract}
 %- Mit wenigen Worten das Problem einführen
