use set copyright none

--- a/report/main.tex
+++ b/report/main.tex
@@ -1,5 +1,7 @@
 \documentclass[sigconf]{acmart}
 
+\setcopyright{none}
+
 \fancyhf{}
 
 % encoding and language
@@ -19,8 +21,6 @@
 \setlength{\paperheight}{\pprh}
 \setlength{\pdfpagewidth}{\pprw}
 \setlength{\pdfpageheight}{\pprh}
-
-\def\@copyrightspace{\relax}
 
 \newacronym{IoT}{IoT}{Internet of Things}
 
