--- a/report/main.tex
+++ b/report/main.tex
@@ -1,6 +1,9 @@
 \documentclass[sigconf]{acmart}
 
+% remove copyright footer
 \setcopyright{none}
+\settopmatter{printacmref=false}
+\renewcommand\footnotetextcopyrightpermission[1]{}
 
 \fancyhf{}
 
