add balance comment

--- a/report/main.tex
+++ b/report/main.tex
@@ -52,8 +52,9 @@
 \input{sections/06_evaluation.tex}
 \input{sections/07_conclusion_future_work.tex}
 
-
+% visually balance both columns
 \balance
+
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{bibliography}
 
