not using babel

--- a/report/main.tex
+++ b/report/main.tex
@@ -8,7 +8,7 @@
 \fancyhf{}
 
 % encoding and language
-\usepackage[USenglish]{babel}
+%\usepackage[english]{babel}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 
