--- a/report/main.tex
+++ b/report/main.tex
@@ -34,10 +34,12 @@
 \author{Jan Ehmueller and Justin Trautmann \\ \today}
 
 \begin{abstract}
-%- Mit wenigen Worten das Problem einführen
-%- Wichtigste verwandte Arbeit erwähnen
-%- Eure wissenschaftlichen Beiträge umreißen
-%- Zusammenfassung der Ergebnisse
+\begin{enumerate}
+	\item Mit wenigen Worten das Problem einführen
+	\item Wichtigste verwandte Arbeit erwähnen
+	\item Eure wissenschaftlichen Beiträge umreißen
+	\item Zusammenfassung der Ergebnisse
+\end{enumerate}
 \end{abstract}
 
 \maketitle
