intro + background draft

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -17,3 +17,32 @@
  publisher={IEEE},
  pages={455-462}
 }
+
+@article{IoTForecastNordrum,
+ author = {Nordrum, Amy},
+ year = {2016},
+ title = {Popular Internet of Things Forecast of 50 Billion Devices by 2020 Is Outdated},
+ publisher = {IEEE}
+}
+
+@misc{IoTForecastGartner,
+ title = {Press Release - Gartner Says 8.4 Billion Connected \"Things\" Will Be in Use in 2017\, Up 31 Percent From 2016},
+ howpublished = {\url{https://www.gartner.com/en/newsroom/press-releases/2017-02-07-gartner-says-8-billion-connected-things-will-be-in-use-in-2017-up-31-percent-from-2016}},
+ note = {Accessed: 2018-08-08}
+}
+
+@inproceedings{Melo2017RobustnessTO,
+  title={Robustness Testing of CoAP Server-side Implementations through Black-box Fuzzing Techniques},
+  author={Bruno Melo and Paulo Licio de Geus},
+  year={2017}
+}
+
+@inproceedings{chen2018ndss,
+ Author = {J. Chen et al.},
+ Booktitle = {NDSS},
+ Date-Added = {2018-02-10 22:44:37 +0000},
+ Date-Modified = {2018-02-10 22:46:44 +0000},
+ Title = {IoTFuzzer: Discovering Memory Corruptions in IoT Through App-based Fuzzing},
+ Year = {2018}
+}
+
