--- a/report/main.tex
+++ b/report/main.tex
@@ -16,6 +16,7 @@
 \usepackage{balance}
 \usepackage[caption=false]{subfig}
 \usepackage[toc,acronym,shortcuts]{glossaries}
+\usepackage{hyperref}
 
 \def\pprw{8.5in}
 \def\pprh{11in}
