--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -25,10 +25,12 @@
  publisher = {IEEE}
 }
 
-@misc{IoTForecastGartner,
- title = {Press Release - Gartner Says 8.4 Billion Connected \"Things\" Will Be in Use in 2017\, Up 31 Percent From 2016},
- howpublished = {\url{https://www.gartner.com/en/newsroom/press-releases/2017-02-07-gartner-says-8-billion-connected-things-will-be-in-use-in-2017-up-31-percent-from-2016}},
- note = {Accessed: 2018-08-08}
+@article{IoTForecastGartner,
+ author = {Gartner Inc.},
+ year = {2017},
+ title = {Press Release - Gartner Says 8.4 Billion Connected "Things" Will Be in Use in 2017, Up 31 Percent From 2016},
+ //howpublished = {\url{https://www.gartner.com/en/newsroom/press-releases/2017-02-07-gartner-says-8-billion-connected-things-will-be-in-use-in-2017-up-31-percent-from-2016}},
+ //note = {Accessed: 2018-08-08}
 }
 
 @inproceedings{Melo2017RobustnessTO,
@@ -46,3 +48,17 @@
  Year = {2018}
 }
 
+@book{Sutton:2007:FBF:1324770,
+ author = {Sutton, Michael and Greene, Adam and Amini, Pedram},
+ title = {Fuzzing: Brute Force Vulnerability Discovery},
+ year = {2007},
+ isbn = {0321446119},
+ publisher = {Addison-Wesley Professional},
+} 
+
+@article{neystadtPenTesting,
+ author = {John Neystadt},
+ year = {2008},
+ title = {Automated Penetration Testing with White-Box Fuzzing},
+ publisher = {Microsoft}
+}
