--- a/report/sections/01_introduction.tex
+++ b/report/sections/01_introduction.tex
@@ -17,4 +17,4 @@ Finding vulnerabilities in a software systems in conjunction with a hardware sys
 
 % TODO fuzzing techniques
 
-To the best of our knowledge, there is little to no work on CoAP fuzzing on real IoT devices. Melo et al.~\cite{Melo2017RobustnessTO} targeted only CoAP implementations with no respect to the underlying hardware and Chen et al.~\cite{chen2018ndss} focused on indirect CoAP fuzzing by using the smartphone apps of specific IoT devices. Therefore fuzzing a conjoined system of any embedded hardware and a CoAP implementation seems promising for finding further unknown vulnerabilities.
+To the best of our knowledge, there is little to no work on CoAP fuzzing on real IoT devices. Melo et al.~\cite{Melo2017RobustnessTO} targeted only CoAP implementations with no respect to the underlying hardware and Chen et al.~\cite{chen2018ndss} focused on indirect CoAP fuzzing by using the smartphone apps of specific IoT devices. Therefore fuzzing a conjoined system of any embedded hardware and a CoAP implementation seems promising for finding further unknown vulnerabilities. Also Muench et al.~\cite{EURECOM+5417} elaborated on different approaches to evaluate fuzzing and detect corrupted behavior aside from total device failures.
