--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -62,3 +62,31 @@
  title = {Automated Penetration Testing with White-Box Fuzzing},
  publisher = {Microsoft}
 }
+
+@inproceedings{EURECOM+5417,
+ year =        {2018},
+ title =       {{W}hat you corrupt is not what you crash: {C}hallenges in fuzzing embedded devices},
+ author =      {{M}uench, {M}arius and  {S}tijohann, {J}an and  {K}argl, {F}rank and  {F}rancillon, {A}ur{\'e}lien and  {B}alzarotti, {D}avide},
+ booktitle =   {{NDSS} 2018, {N}etwork and {D}istributed {S}ystems {S}ecurity {S}ymposium, 18-21 {F}ebruary 2018, {S}an {D}iego, {CA}, {USA}},
+ address =     {{S}an {D}iego, {UNITED} {STATES}},
+ month =       {02},
+ url =  	      {http://www.eurecom.fr/publication/5417}
+}
+
+@inproceedings {addressSanitizer,
+ author = {Konstantin Serebryany and Derek Bruening and Alexander Potapenko and Dmitriy Vyukov},
+ title = {AddressSanitizer: A Fast Address Sanity Checker},
+ booktitle = {Presented as part of the 2012 {USENIX} Annual Technical Conference ({USENIX} {ATC} 12)},
+ year = {2012},
+ isbn = {978-931971-93-5},
+ address = {Boston, MA},
+ pages = {309--318},
+ url = {https://www.usenix.org/conference/atc12/technical-sessions/presentation/serebryany},
+ publisher = {{USENIX}},
+}
+
+@article{PawelLeo,
+ author = {Böning, Pawel and Marschke, Leonard},
+ year = {2018},
+ title = {RPL Fuzzing}
+}
