--- a/report/main.tex
+++ b/report/main.tex
@@ -28,6 +28,9 @@
 
 \newacronym{IoT}{IoT}{Internet of Things}
 
+\usepackage{xspace}
+\newcommand{\scapy}{Scapy\xspace}
+
 \begin{document}
 
 \title{Security for the Internet of Things - CoAP Fuzzing}
