--- a/report/sections/02_background.tex
+++ b/report/sections/02_background.tex
@@ -10,6 +10,6 @@ The CoAP protocol defined in RFC7252\footnote{\url{https://tools.ietf.org/html/r
 
 Our target system for the security evaluation was an OpenMote Rev. A1\footnote{\url{www.openmote.com}} which mainly consists of a CC2538 SoC\footnote{\url{www.ti.com/product/CC2538}} running Contiki-NG~\cite{contiki}. As CoAP server implementation target, the Contiki-NG example implementation\footnote{\url{https://github.com/contiki-ng/contiki-ng/blob/develop/examples/coap/coap-example-server/coap-example-server.c}} was used.
 
-On the attacker side, we used the python packet manipulation framework Scapy\footnote{\url{https://scapy.net}} with its latest CoAP community contribution\footnote{\url{https://github.com/secdev/scapy/blob/master/scapy/contrib/coap.py}}. This enables us to easily assemble CoAP messages, perform request and log the response.
+On the attacker side, we used the python packet manipulation framework \scapy\footnote{\url{https://scapy.net}} with its latest CoAP community contribution\footnote{\url{https://github.com/secdev/scapy/blob/master/scapy/contrib/coap.py}}. This enables us to easily assemble CoAP messages, perform request and log the response.
 
 Fuzzing techniques can be categorized with respect to the approach into random fuzzing, mutational fuzzing and generational fuzzing and with respect to the target system into white-box, gray-box and black-box fuzzing~\cite{neystadtPenTesting}. Random fuzzing is the most inefficient technique with respect to the potentially found errors but relatively simple to set up and best suited for systems that are completely unknown (black-box fuzzing). If some details about the used protocol or message format are known, random fuzzing can be adapted to informed fuzzing so that specific fields such as checksums are still valid in order to avoid instant rejection of the messages. Mutational fuzzing is based on previously captured valid communication with the system under test that is altered in order to get potentially malicious messages that are still very similar to usual messages and have therefore a high chance to cause damage because they are not immediately rejected by security mechanisms. Lastly generational fuzzing is based on the known structure of the protocol and therefore not suited for black-box fuzzing. Using an empty skeleton of a valid message, fields are randomly or informed randomly filled with values. This makes sure that the message can at least be parsed by the system under test and deeper mechanisms than only the message parser can be reached.
