add coap rfc to bibliography

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -73,7 +73,7 @@
  url =  	      {http://www.eurecom.fr/publication/5417}
 }
 
-@inproceedings {addressSanitizer,
+@inproceedings{addressSanitizer,
  author = {Konstantin Serebryany and Derek Bruening and Alexander Potapenko and Dmitriy Vyukov},
  title = {AddressSanitizer: A Fast Address Sanity Checker},
  booktitle = {Presented as part of the 2012 {USENIX} Annual Technical Conference ({USENIX} {ATC} 12)},
@@ -89,4 +89,19 @@
  author = {Böning, Pawel and Marschke, Leonard},
  year = {2018},
  title = {RPL Fuzzing}
+}
+
+@techreport{RFC7252,
+  author = {Z. Shelby and K. Hartke and C. Bormann},
+  title = {The Constrained Application Protocol (CoAP)},
+  howpublished = {Internet Requests for Comments},
+  type = {RFC},
+  number = {7252},
+  year = {2014},
+  month = {June},
+  issn = {2070-1721},
+  publisher = {RFC Editor},
+  institution = {RFC Editor},
+  url = {http://www.rfc-editor.org/rfc/rfc7252.txt},
+  note = {\url{http://www.rfc-editor.org/rfc/rfc7252.txt}},
 }
