--- a/report/main.tex
+++ b/report/main.tex
@@ -28,8 +28,39 @@
 
 \newacronym{IoT}{IoT}{Internet of Things}
 
+% shortcut for consistent naming of scapy
 \usepackage{xspace}
 \newcommand{\scapy}{Scapy\xspace}
+
+% autoref with capital letter (from https://tex.stackexchange.com/a/40413)
+\usepackage{catoptions}
+\makeatletter
+\def\figureautorefname{figure}
+\def\tableautorefname{table}
+\def\Autoref#1{%
+  \begingroup
+  \edef\reserved@a{\cpttrimspaces{#1}}%
+  \ifcsndefTF{r@#1}{%
+    \xaftercsname{\expandafter\testreftype\@fourthoffive}
+      {r@\reserved@a}.\\{#1}%
+  }{%
+    \ref{#1}%
+  }%
+  \endgroup
+}
+\def\testreftype#1.#2\\#3{%
+  \ifcsndefTF{#1autorefname}{%
+    \def\reserved@a##1##2\@nil{%
+      \uppercase{\def\ref@name{##1}}%
+      \csn@edef{#1autorefname}{\ref@name##2}%
+      \autoref{#3}%
+    }%
+    \reserved@a#1\@nil
+  }{%
+    \autoref{#3}%
+  }%
+}
+\makeatother
 
 \begin{document}
 
