--- a/report/sections/06_evaluation.tex
+++ b/report/sections/06_evaluation.tex
@@ -1,4 +1,5 @@
 \section{Evaluation}
+\label{section:evaluation}
 
 \begin{enumerate}
 	\item Evaluierung interessanter Aspekte anhand von Statistiken
