add jans comments

--- a/report/sections/02_background.tex
+++ b/report/sections/02_background.tex
@@ -7,7 +7,7 @@
 	\item Bei Platzmangel könnt ihr diesen Abschnitt auch weglassen und stattdessen bei den entsprechenden Stellen Verweise einfügen
 \end{enumerate}
 
-The CoAP protocol defined in RFC7252 can be seen as a lightweight version of HTTP and can be easily mapped on it~\cite{RFC7252}. Basically, three types of messages can be transferred via UDP. A request can consist of Confirmable (CON) and Non-confirmable (NON) messages. Confirmable messages are expected to be responded by an Acknowledgment (ACK) message. Non-confirmable messages don't require any response but a response can be send as a NON message. All of these message types can use the four methods GET, PUT, POST and DELETE and get back defined status codes that are very similar to their corresponding HTTP methods and codes. Furthermore, every message is identified by an ID and a token and can be adjusted by several options. In \Autoref{section:approach} we further describe and evaluate specific properties of the CoAP message fields.
+The CoAP protocol defined in RFC7252 a lightweight and RESTful protocoll that can be easily mapped on HTTP~\cite{RFC7252}. Basically, four types of messages can be transferred via UDP. A request can consist of Confirmable (CON) and Non-confirmable (NON) messages. Confirmable messages are expected to be responded by an Acknowledgment (ACK) message. Furthermore, reset messages (RST) can be send. Non-confirmable messages don't require any response but a response can be send as a NON message. All of these message types can use the four methods GET, PUT, POST and DELETE and get back defined status codes that are very similar to their corresponding HTTP methods and codes. Furthermore, every message is identified by an ID and a token and can be adjusted by several options. In \Autoref{section:approach} we further describe and evaluate specific properties of the CoAP message fields.
 
 Our target system for the security evaluation was an OpenMote Rev. A1\footnote{\url{www.openmote.com}} which mainly consists of a CC2538 SoC\footnote{\url{www.ti.com/product/CC2538}} running Contiki-NG~\cite{contiki}. As CoAP server implementation target, the Contiki-NG example implementation\footnote{\url{https://github.com/contiki-ng/contiki-ng/blob/develop/examples/coap/coap-example-server/coap-example-server.c}} was used.
 
