--- a/report/sections/04_approach.tex
+++ b/report/sections/04_approach.tex
@@ -8,11 +8,11 @@
 	\item Modelle einsetzen
 \end{enumerate}
 
-Since we intend to fuzz a CoAP implementation running on a real IoT device we needed to decide on a setup that enables us to properly send messages with a high throughput and to implement a fuzzer in an easy-to-use high-level language. Having these goals we decided against fuzzing as an internal attacker from an embedded device in the IoT network, since it has limited resources compared to a desktop or laptop. It would also mean that we would need to implement the fuzzer in C, which would take us longer and it would be harder to implement features compared to a scripting language like python.
+Since we intend to fuzz a CoAP implementation running on a real IoT device we needed to decide on a setup that enables us to properly send messages with a high throughput and to implement a fuzzer in an easy-to-use high-level language. Having these goals we decided against fuzzing as an internal attacker from an embedded device in the IoT network, since it has limited resources compared to a desktop computer or laptop. It would also mean that we would need to implement the fuzzer in C, which would take us longer and it would be harder to implement features compared to a scripting language like Python.
 
 We therefore decided to fuzz the IoT device as an external attacker from a laptop that is not part of the IoT network. To do so we need to be able to communicate with the embedded device via IPv6, which is possible if we set up one OpenMote as a border router and a second one as a CoAP server. Via the border router we can send messages via IPv6 into the IoT network and therefore send messages to the CoAP server. The CoAP server uses the Contiki-NG CoAP implementation and runs its CoAP example server on the application layer. Since we only want to fuzz CoAP it does not matter to us what the server on the application layer does with the payload of the CoAP messages.
 
-Having decided on the setup we chose to implement the fuzzer in python and similarly to Melo et al.~\cite{Melo2017RobustnessTO} we use \scapy to create crafted CoAP packets and send them to the IoT device. Our fuzzing workflow looks as follows. We first send a crafted packet to the CoAP server and await a possible response. After getting the response or getting a timeout (e.g., after sending a NON-message) we then test if the IoT device is still reachable or if it somehow does not respond to messages anymore (e.g., due to a crash or some other malfunction). 
+Having decided on the setup we chose to implement the fuzzer in Python and similarly to Melo et al.~\cite{Melo2017RobustnessTO} we use \scapy to create crafted CoAP packets and send them to the IoT device. Our fuzzing workflow looks as follows. We first send a crafted packet to the CoAP server and await a possible response. After getting the response or getting a timeout (e.g., after sending a NON-message) we then test if the IoT device is still reachable or if it somehow does not respond to messages anymore (e.g., due to a crash or some other malfunction). 
 
 \begin{figure}[h]
 		\centering
@@ -28,7 +28,7 @@ After determining the message flow we now needed to decide how the craft the CoA
 	\item \textbf{Message Type}: since all four message types are valid we simply randomly fuzz this field.
 	\item \textbf{Token Length}: this field contains the length of the token field, which is needed because CoAP has a lot of implicit field sizes in its header. The lengths 9 to 15 are reserved according to the RFC and Contiki-NG tests whether this field is larger than 8~\cite{RFC7252}. We therefore fuzz this field randomly in the range [0, 8].
 	\item \textbf{Status Code}: every not implemented status code is simply caught by the implementation. Therefore, we randomly choose either a request or a response status code.
-	\item \textbf{Message ID}: this id identifies CoAP messages for the purposed of deduplication and response matching. It has a random value anyway, which means that we do not gain anything by fuzzing this field. But we still need to set it randomly to be able to properly send and receive our crafted CoAP messages.
+	\item \textbf{Message ID}: this id identifies CoAP messages for the purpose of deduplication and response matching. It has a random value anyway, which means that we do not gain anything by fuzzing this field. But we still need to set it randomly to be able to properly send and receive our crafted CoAP messages.
 	\item \textbf{Token}: this field is practically the request id. The length of this field can differ from the token length field, since there are no well-defined boundaries for the following fields. That means it can not be checked if the token is too long or too short. We set this value randomly, but the byte length is independent from the value of the token length field.
 	\item \textbf{Options}: CoAP options are parsed by reading the bytes after the token and trying to parse them as an option. These options each have small headers themselves, but unfortunately \scapy does enable us to fuzz these option headers as well.
 
