konrad feedback ready

--- a/report/sections/01_introduction.tex
+++ b/report/sections/01_introduction.tex
@@ -1,12 +1,12 @@
 \section{Introduction}
 \label{section:introduction}
 
-\begin{enumerate}
-	\item Kontext einführen
-	\item Problem darstellen
-	\item Den diesbezüglichen Stand der Technik zusammenfassen
-	\item Eure wissenschaftlichen Beiträge auflisten
-\end{enumerate}
+%\begin{enumerate}
+%	\item Kontext einführen
+%	\item Problem darstellen
+%	\item Den diesbezüglichen Stand der Technik zusammenfassen
+%	\item Eure wissenschaftlichen Beiträge auflisten
+%\end{enumerate}
 
 Nowadays, already 8.4 billion connected things are part of the Internet of Things (IoT)~\cite{IoTForecastGartner} and it is constantly growing so that a number of around 30 billion devices can be expected by the year 2020~\cite{IoTForecastNordrum}. IoT devices are used in a variety of application scenarios but have in common, that they are usually heavily constrained with respect to the computation power due to battery restrictions and size. Nonetheless they are mostly connected to the internet and can be accessed from anywhere. Since IoT systems often involve highly personal or enterprise data and mechanisms, this leads to a high demand for security. 
 
