--- a/report/sections/06_evaluation.tex
+++ b/report/sections/06_evaluation.tex
@@ -1,9 +1,9 @@
 \section{Evaluation}
 \label{section:evaluation}
 
-\begin{enumerate}
-	\item Evaluierung interessanter Aspekte anhand von Statistiken
-\end{enumerate}
+%\begin{enumerate}
+%	\item Evaluierung interessanter Aspekte anhand von Statistiken
+%\end{enumerate}
 
 When performing fully automated fuzzing, processing of one fuzzed message takes around 5.2 seconds. Setup times for the devices can vary due to cached binaries but can reach the magnitude of several minutes. In order to evaluate the fuzzer and the system under test, we performed 20.000 fuzzing requests but did not succeeded in causing a crash or a device malfunction. Nonetheless, we ensured that potential crashes can be found by our setup, by intentionally adding an infinite loop to the CoAP implementation of Contiki-NG as a reaction to a specific message.
 
