Fix CoAP Header pdf

--- a/report/sections/03_related_work.tex
+++ b/report/sections/03_related_work.tex
@@ -1,11 +1,11 @@
 \section{Related Work}
 \label{section:related_work}
 
-\begin{enumerate}
-	\item Umfänglichere Diskussion verwandter Arbeiten
-	\item Vergleichend mit eurem Ansatz
-	\item Manchmal bietet es sich an diesen Abschnitt erst vor den Conclusions zu bringen
-\end{enumerate}
+% \begin{enumerate}
+% 	\item Umfänglichere Diskussion verwandter Arbeiten
+% 	\item Vergleichend mit eurem Ansatz
+% 	\item Manchmal bietet es sich an diesen Abschnitt erst vor den Conclusions zu bringen
+% \end{enumerate}
 
 Previous work on CoAP fuzzing is sparse and only focused on implementation fuzzing. Melo et al.~\cite{Melo2017RobustnessTO} searched for publicly available CoAP implementations on common repository services and search engines and selected a few for testing. Their testing system consisted of the boofuzz framework\footnote{\url{https://github.com/jtpereyda/boofuzz}} in order to start, stop and monitor the systems under test and several \scapy based fuzzing engines. They applied random, mutational and generational fuzzing. As expected, generational fuzzing caused way more crashes than informed random and random fuzzing.
 
