--- a/report/sections/04_approach.tex
+++ b/report/sections/04_approach.tex
@@ -16,7 +16,7 @@ Having decided on the setup we chose to implement the fuzzer in Python and simil
 
 \begin{figure}[h]
 		\centering		
-		\includegraphics[width=0.5\textwidth]{images/coap_message_format.pdf}
+		\includegraphics[width=0.5\textwidth]{images/coap_message_format}
 		\caption{CoAP header fields defined in the CoAP RFC~\cite{RFC7252}}
 		\label{figure:coap_header}
 \end{figure}
