--- a/report/main.tex
+++ b/report/main.tex
@@ -64,7 +64,8 @@
 
 \begin{document}
 
-\title{Security for the Internet of Things - CoAP Fuzzing}
+\title{CoAP Fuzzing in Contiki-NG}
+\subtitle{Security for the Internet of Things}
 
 \author{Jan Ehmueller and Justin Trautmann \\ \today}
 
